force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/FlexiChk__Checklist_Item_Template__c.object-meta.xml
<CustomObject>
    <label>Checklist Item Template</label>
    <nameField>
        <displayFormat>TITEM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Item Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>