force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Active__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>