force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Answer_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Answer_Placeholder__c</fullName>
    <label>Answer Placeholder</label>
    <length>150</length>
    <type>Text</type>
</CustomField>