force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Answer_Required__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Answer_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Answer Required</label>
    <type>Checkbox</type>
</CustomField>