force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Archived__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>