force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Checklist_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checklist Template</label>
    <referenceTo>FlexiChk__Checklist_Template__c</referenceTo>
    <relationshipLabel>Checklist Item Templates</relationshipLabel>
    <relationshipName>Checklist_Item_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>