force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Dependent_Answer__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Dependent_Answer__c</fullName>
    <label>Dependent Answer</label>
    <type>TextArea</type>
</CustomField>