force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Item_Status_Change_Alert__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Item_Status_Change_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item Status Change Alert</label>
    <type>Checkbox</type>
</CustomField>