force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Order__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>