force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <type>TextArea</type>
</CustomField>