force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Question__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>