force-app/main/default/objects/FlexiChk__Checklist_Item_Template__c/fields/FlexiChk__Question_Plain__c.field-meta.xml
<CustomField>
    <fullName>FlexiChk__Question_Plain__c</fullName>
    <label>Question (Plain)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>